--- a/src/components/AssessmentTable/AssessmentTable.css
+++ b/src/components/AssessmentTable/AssessmentTable.css
@@ -18,13 +18,16 @@ th, td {
     border-bottom: 1px solid #ddd;
 }
 
-.status {
+.status{
     display: inline-block;
     padding: 5px 10px;
     border-radius: 12px;
     color: white;
 }
 
+.status.rejected{
+    background-color: red;
+}
 .status.approved {
     background-color: green;
 }
