--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
 .app {
+    
+   
     display: flex;
 }
 
 .content {
     flex: 1;
-    background-color: #ecf0f1;
+    background-color: #eaf2f5;
     padding: 20px;
 }
+
+
+
+
